# paperfetcher

./: .gitignore  README.md  pyproject.toml
src/paperfetcher/: cli.py  fetch.py
