[tool.poetry]
name = "paperfetcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "paperfetcher", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.4"

[tool.poetry.scripts]
get-papers-list = "paperfetcher.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
